style(*): fix navbar z-index

--- a/src/components/Layout/Navigation/NavTop/index.css
+++ b/src/components/Layout/Navigation/NavTop/index.css
@@ -6,6 +6,7 @@
     width:100%;
     justify-content:space-between;
     align-items:center;
+    z-index: 50;
 }
 
 .navbar-top__left,
